--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <div class="navbar-nav py-0">
                             <a href="index.html" class="nav-item nav-link active">Strona Główna</a>
                             <a href="about.html" class="nav-item nav-link">O nas</a>
-                            <a href="course.html" class="nav-item nav-link">Finanse</a>
+                            <a href="figma.html" class="nav-item nav-link">Finanse</a>
                             <a href="teacher.html" class="nav-item nav-link">Twoje studia</a>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Blog</a>
